--- a/cmd/web/templates/plans.page.gohtml
+++ b/cmd/web/templates/plans.page.gohtml
@@ -49,7 +49,7 @@
                 confirmButtonText: 'Subscribe',
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = '/subscribe?id=' + x;
+                    window.location.href = '/members/subscribe?id=' + x;
                 }
             })
         }
