--- a/cmd/web/templates/home.page.gohtml
+++ b/cmd/web/templates/home.page.gohtml
@@ -6,8 +6,12 @@
             <div class="col-md-8 offset-md-2">
                 <h1 class="mt-5">Home</h1>
                 <hr>
-                <a class="btn btn-outline-secondary" href="/login">Login</a>
-                <a class="btn btn-outline-secondary" href="/register">Register</a>
+                {{if .Authenticated}}
+                    <a class="nav-link active" href="/members/plans">Check plans!</a>
+                {{else}}
+                    <a class="btn btn-outline-secondary" href="/login">Login</a>
+                    <a class="btn btn-outline-secondary" href="/register">Register</a>
+                {{end}}                
             </div>
 
         </div>
