--- a/cmd/web/templates/home.page.gohtml
+++ b/cmd/web/templates/home.page.gohtml
@@ -7,7 +7,7 @@
                 <h1 class="mt-5">Home</h1>
                 <hr>
                 {{if .Authenticated}}
-                    <a class="nav-link active" href="/members/plans">Check plans!</a>
+                    <a class="btn btn-outline-secondary" href="/members/plans">Plans</a>
                 {{else}}
                     <a class="btn btn-outline-secondary" href="/login">Login</a>
                     <a class="btn btn-outline-secondary" href="/register">Register</a>
